--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img src="about.jpg">
                 </div>
                 <div class="about-c-2">
-                    <h1 class="Sub-title">About me</h1>
+                    <h1 class="Sub-title">About me</h1><br>
                     <p>Hi, this is Selva Prasanna An Engineering Newgrad with a passion for Programming and Analytics. I thrive on staying up-to-date with the latest trends in technology
                         and have a natural adaptability to new tools and frameworks. Equipped with a good understanding of data structures and algorithms, I am driven to solve
                         complex problems through logical thinking and systematic approaches</p>
@@ -49,12 +49,12 @@
                         <div class="tab-contains active-tab" id="Skills">
                             <ul>
                                 <li><span>Python</span></li>
-                                <li><span>Web Security</span><br>Penetration and Vulnerabliity testing</li>
+                                <li><span>Web Security</span><br> - Penetration and Vulnerabliity testing</li>
                                 <li><span>C++ Programming</span></li>
                                 <li><span>C Progaramming</span></li>
                                 <li><span>SQL</span></li>
-                                <li><span>Web Development</span><br>HTML5, CSS3, JavaScript</li>
-                                <br><span><h3>Mechanical</h3></span>
+                                <li><span>Web Development</span><br> - HTML5, CSS3, JavaScript</li>
+                                <br><span><h3>Mechanical</h3><br></span>
                                 <li><span>Ansys</span></li>
                                 <li><span>Creo</span></li>
                             </ul>
