--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <a href="https://www.instagram.com/_selva_sp_/" target="_blank"><i class="fa-brands fa-instagram" style="color: #fafcff;"></i></a>
                         <a href="#" target="_blank"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
                     </div>
-                    <a href="SelvaCv.pdf" target="_blank" download="SelvaPrasanna_Cv" class="btn">Download My Resume</a>
+                    <a href="Selva Prasanna_CV.pdf" target="_blank" download="SelvaPrasanna_Cv" class="btn">Download My Resume</a>
                 </div>
                 <div class="con-right">
                       <form name="submit-to-google-sheet">
