--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
                         </div>
                         <div class="tab-contains active-tab" id="Skills">
                             <ul>
+                                <li><span>Core Java</span></li>
                                 <li><span>Python</span></li>
                                 <li><span>Web Security</span><br> - Penetration and Vulnerabliity testing</li>
                                 <li><span>C++ Programming</span></li>
                                 <li><span>C Progaramming</span></li>
                                 <li><span>SQL</span></li>
-                                <li><span>Web Development</span><br> - HTML5, CSS3, JavaScript</li>
+                                <li><span>HTML5 & CSS3</span></li>
                                 <br><span><h3>Mechanical</h3><br></span>
                                 <li><span>Ansys</span></li>
                                 <li><span>Creo</span></li>
@@ -236,7 +237,7 @@
                 Msg.innerHTML="Message Sent Successfully"
                 setTimeout(function(){
                     Msg.innerHTML=""
-                },4500)
+                },2500)
                 form.reset()
             })
             .catch(error => console.error('Error!', error.message))
